--- a/index.html
+++ b/index.html
@@ -575,6 +575,11 @@
     </style>
 </head>
 <body>
+    <!-- AUDIO DE FONDO -->
+    <audio id="bgMusic" loop>
+        <source src="musica.mp3" type="audio/mpeg">
+    </audio>
+    
     <!-- Corazones flotantes -->
     <div class="floating-hearts" id="floatingHearts"></div>
 
@@ -1155,3 +1160,4 @@
         });
     </script>
 </body>
+
